--- a/index.html
+++ b/index.html
@@ -194,11 +194,6 @@ font-style: italic;
                                 </h4>
                             </a>
 
-                            <a href="https://www.topuniversities.com/universities/university-tehran">
-                                <i ><p class="era" style="margin: 0%; padding:0%">(Ranked <b>142</b> in Liden Rankings 2023)</p></i>
-                                <i><p class="era" style="margin: 0%; padding:0%">(Ranked <b>360</b> in QS World University Rankings 2024)</p></i>
-                            </a>
-
                             <h7 class="">
                                 <b>M.Sc. Student of Information Technology</b>
                                 <br>
@@ -219,11 +214,6 @@ font-style: italic;
                                 </h4>
                             </a>
 
-                            <a>
-                                <i ><p class="era" style="margin: 0%; padding:0%">(Ranked <b>550</b> in Liden Rankings 2023)</p></i>
-                                <i ><p class="era" style="margin: 0%; padding:0%">(Ranked <b>950-1000</b> in QS World University Rankings 2024)</p></i>
-                            </a>
-
                             <h7 class="">
                                 <b>B.Sc. in Software Engineering, 2020</b>
                                 <br>
@@ -232,7 +222,7 @@ font-style: italic;
 
                             <h6 class="era" style="margin: 0%;">
                                 <i class="fa fa-calendar fa-fw w3-margin-right ii w3-hover-opacity"></i>[2015 – 2020]</h6>
-                            <p>Overall GPA: 17.34/20</br>
+                            <p>Overall GPA: <b>17.34</b>/20</br>
                         
                         </div>
 
@@ -244,12 +234,12 @@ font-style: italic;
                         </h2>
                         <div style="column-count:2;">
                             <ul style="list-style-type:circle; padding-bottom: 3%;">
-                                <li><b>Data Analytics and Visualization</b></li>
                                 <li><b>Data Mining</b></li>
                                 <li><b>Machine Learning</b></li>
-                                <li><b>Health Informatics</b></li>
+                                <li><b>Software Engineering</b></li>
+                                <li><b>Interdisciplinary Research</b></li>
                                 <li><b>Human-Computer Interaction</b></li>
-                                <li><b>Trustworthy AI</b></li>
+                                <li><b>Experimental Research</b></li>
                             </ul>
                         </div>
                     </div>
@@ -261,13 +251,11 @@ font-style: italic;
                         </h2>
 
                         <ol type="1">
-
+                            
                             <li>
                                 <b>MBTI-Based Personality Assessment through Introducing a Puzzle Game</b> 
-                                <p><I>https://doi.org/10.1109/icwr57742.2023.10139311.</I> </p>
-                                <a href=""><img src="https://img.shields.io/badge/published-success"></img></a>
-                                <a href=""><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
-                            </li>
+                                <p><a href="https://doi.org/10.1109/icwr57742.2023.10139311"><I>https://doi.org/10.1109/icwr57742.2023.10139311</I> </a> </p>
+                             </li>
                             <hr>
                             <li>
                                 <b>MBTI-Personality Types and Traits of Professional Software Engineers</b> 
@@ -581,6 +569,9 @@ font-style: italic;
             <!-- End Grid -->
             <footer class="w3-container footer w3-center w3-margin-top w3-round-large PageName">
                     <h4 style="color: aliceblue;">Find me on social media</h4>
+                    <a href="https://ir.linkedin.com/in/soroush-elyasi-0692ba168">
+                        <i class="fa fa-linkedin w3-hover-opacity linkedin SM w3-xxxlarge">. </i>
+                    </a>
                     <a href="https://ir.linkedin.com/in/soroush-elyasi-0692ba168">
                         <i class="fa fa-linkedin w3-hover-opacity linkedin SM w3-xxxlarge">. </i>
                     </a>
