--- a/index.html
+++ b/index.html
@@ -255,18 +255,20 @@ font-style: italic;
                             <li>
                                 <b>MBTI-Based Personality Assessment through Introducing a Puzzle Game</b> 
                                 <p><a href="https://doi.org/10.1109/icwr57742.2023.10139311"><I>https://doi.org/10.1109/icwr57742.2023.10139311</I> </a> </p>
-                             </li>
+                                <a href=".\Assets\MBTI-Based Personality Assessment through Introducing a Puzzle Game.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
+                            </li>
                             <hr>
                             <li>
                                 <b>MBTI-Personality Types and Traits of Professional Software Engineers</b> 
                                 <a href=""><img src="https://img.shields.io/badge/Accepted-success"></img></a>
+                                <a href=".\Assets\MBTI-Personality Types and Traits of Professional Software Engineers Abstract.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
                                 <!-- <a href=""><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a> -->
                             </li>
                             <hr>
                             <li>
                                 <b>Developing Multi-Genre Games to Detect Depression and Anxiety Disorders</b> 
                                 <a href=""><img src="https://img.shields.io/badge/Submitted-c4c102"></img></a>
-                                <!-- <a href=""><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a> -->
+                               <a href=".\Assets\Developing Multi-Genre Games to Detect Depression Abstract.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
                                 <p>Assess and quantify player behavior throughout various stages of a video game to identify signs of depression and anxiety disorders. This approach reduces reliance on questionnaires for diagnosing these conditions.</p>
 
                             </li>
@@ -281,7 +283,7 @@ font-style: italic;
                             <li>
                                 <b>Prediction of Depression and Anxiety Disorders via Game Using Machine Learning Model</b> 
                                 <a href=""><img src="https://img.shields.io/badge/Ongoing-636363"></img></a>
-                                <!-- <a href=""><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a> -->
+                                <a href=".\Assets\Prediction of Depression and Anxiety Disorders via Game Using Machine Learning Model Abstract.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
 
                             </li>
                             <hr>
