--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ font-style: italic;
                             
                             <li>
                                 <b>MBTI-Based Personality Assessment through Introducing a Puzzle Game</b> 
-                                <a href=".\Assets\MBTI-Based Personality Assessment through Introducing a Puzzle Game.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
+                                <a href=".\Assets\MBTI-Based Personality Assessment through Introducing a Puzzle Game Abstract.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
                                 <p><a href="https://doi.org/10.1109/icwr57742.2023.10139311"><I>https://doi.org/10.1109/icwr57742.2023.10139311</I> </a> </p>
                             </li>
                             <hr>
