--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ font-style: italic;
                             </a>
                         </h5>
                         <p></p>
-                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer Team Leader</span> <b class="era">[2022 - 2023] </b>
+                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer Team Leader – Developing ERP</span> <b class="era">[2022 - 2023] </b>
                         </h6>
                         <hr>
 
@@ -431,7 +431,7 @@ font-style: italic;
                             </a>
                         </h5>
                         <p></p>
-                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer</span> <b class="era">[2020 - 2022] </b>
+                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer – Developing ERP</span> <b class="era">[2020 - 2022] </b>
                         </h6>
                         <hr>
 
@@ -442,7 +442,7 @@ font-style: italic;
                             </a>
                         </h5>
                         <p></p>
-                        <h6 class="subTitle"><span class="TEItem">Software Consultant</span> <b class="era">[2020] </b>
+                        <h6 class="subTitle"><span class="TEItem">Software Consultant – Developing ERP</span> <b class="era">[2020] </b>
                         </h6>
                         <hr>
 
@@ -453,7 +453,7 @@ font-style: italic;
                             </a>
                         </h5>
                         <p></p>
-                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer</span> <b class="era">[2019 - 2020] </b>
+                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer – Developing ERP</span> <b class="era">[2019 - 2020] </b>
                         </h6>
                         <hr>
 
@@ -464,7 +464,7 @@ font-style: italic;
                             </a>
                         </h5>
                         <p></p>
-                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer</span> <b class="era">[2018 - 2019] </b>
+                        <h6 class="subTitle"><span class="TEItem">Backend and Frontend Developer – Developing Project Management Application</span> <b class="era">[2018 - 2019] </b>
                         </h6>
                         <hr>
 
@@ -486,7 +486,7 @@ font-style: italic;
                             </a>
                         </h5>
                         <p></p>
-                        <h6 class="subTitle"><span class="TEItem">Software Developer</span> <b class="era">[2017 - 2018] </b>
+                        <h6 class="subTitle"><span class="TEItem">Software Developer – Developing ERP</span> <b class="era">[2017 - 2018] </b>
                         </h6>
                         <p></p>
                     </div>
