Update index.html dsad
dsad

--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@ font-style: italic;
                             <h7 class="">
                                 <b>M.Sc. Student of Information Technology</b>
                                 <br>
-                                <b style="margin: 0%;">Thesis: personality job fitness for software developers via game</b>
+                                <b style="margin: 0%;">Thesis: MentalGame: Predicting Personality-Job Fitness for Software Developers Using Multi-Genre Games and Machine Learning Approaches</b>
                             </h7>
 
                             <h6 class="era " style="margin: 0%;">
-                                <i class="fa fa-calendar fa-fw w3-margin-right ii w3-hover-opacity"></i>[September 2020 – present]</h6>
+                                <i class="fa fa-calendar fa-fw w3-margin-right ii w3-hover-opacity"></i>[September 2020 – September 2023]</h6>
 
                          <p>Overall GPA: <b>16.85</b>/20</br> 
                             <hr>
@@ -217,7 +217,7 @@ font-style: italic;
                             <h7 class="">
                                 <b>B.Sc. in Software Engineering, 2020</b>
                                 <br>
-                                <b style="margin: 0%;">Thesis: Design and develop Educational Helper System</b>
+                                <b style="margin: 0%;">ElevateLearn: A Comprehensive Teaching Assistant Web Platform for Enhanced E-Learning and Student Management</b>
                             </h7>
 
                             <h6 class="era" style="margin: 0%;">
@@ -236,10 +236,10 @@ font-style: italic;
                             <ul style="list-style-type:circle; padding-bottom: 3%;">
                                 <li><b>Data Mining</b></li>
                                 <li><b>Machine Learning</b></li>
-                                <li><b>Software Engineering</b></li>
-                                <li><b>Interdisciplinary Research</b></li>
+                                <li><b>E-Learning</b></li>
+                                <li><b>AR/VR</b></li>
                                 <li><b>Human-Computer Interaction</b></li>
-                                <li><b>Experimental Research</b></li>
+                                <li><b>Game-Based Learning/Assesment</b></li>
                             </ul>
                         </div>
                     </div>
@@ -267,8 +267,8 @@ font-style: italic;
                             <hr>
                             <li>
                                 <b>Developing Multi-Genre Games to Detect Depression and Anxiety Disorders</b> 
-                                <a href=""><img src="https://img.shields.io/badge/Submitted-c4c102"></img></a>
-                               <a href=".\Assets\Developing Multi-Genre Games to Detect Depression Abstract.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
+                                <a href=""><img src="https://img.shields.io/badge/Accepted-success"></img></a>
+                                 <a href=".\Assets\Developing Multi-Genre Games to Detect Depression Abstract.pdf"><img src="https://img.shields.io/badge/-PDF-informational?logo=Adobe Acrobat Reader&logoColor=white&labelColor=red"></img></a>
                                 <p>Assess and quantify player behavior throughout various stages of a video game to identify signs of depression and anxiety disorders. This approach reduces reliance on questionnaires for diagnosing these conditions.</p>
 
                             </li>
